[gd_scene load_steps=7 format=3 uid="uid://vndmqgxdor5r"]

[ext_resource type="Texture2D" uid="uid://bef8arj7ss30b" path="res://Sprites/title.png" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://b07uj88xstky" path="res://Scripts/main_menu.gd" id="1_rtw2f"]
[ext_resource type="Texture2D" uid="uid://bkbicy7vo0iqm" path="res://Sprites/snekplay - def.png" id="2_8ln24"]
[ext_resource type="Texture2D" uid="uid://bl16w20ytbyaw" path="res://Sprites/snekplay - sel.png" id="3_rtw2f"]
[ext_resource type="Texture2D" uid="uid://cmcuahn5x3wes" path="res://Sprites/credits2.png" id="4_oa1go"]
[ext_resource type="Texture2D" uid="uid://bh32n1u3etig1" path="res://Sprites/credits1.png" id="5_tbmy8"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_rtw2f")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-335.5, -138)
scale = Vector2(2.39792, 1.79444)
texture = ExtResource("1_l6cm7")

[node name="Camera2D" type="Camera2D" parent="Sprite2D"]

[node name="TitleLabel" type="Label" parent="."]
offset_left = -700.0
offset_top = -400.0
offset_right = -560.0
offset_bottom = -360.0
theme_override_font_sizes/font_size = 96
text = "WIN WIN WIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -696.0
offset_top = -200.0
offset_right = -564.0
offset_bottom = -165.0
color = Color(1, 1, 1, 0)

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Play" type="TextureButton" parent="ColorRect/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_8ln24")
texture_hover = ExtResource("3_rtw2f")

[node name="Quit" type="MenuButton" parent="ColorRect/HBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = -122.0
offset_top = -207.0
offset_right = 12.0
offset_bottom = -160.0
color = Color(1, 1, 1, 0)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Credits" type="TextureButton" parent="ColorRect2/MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("4_oa1go")
texture_hover = ExtResource("5_tbmy8")

[connection signal="pressed" from="ColorRect/HBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="ColorRect2/MarginContainer/Credits" to="." method="_on_credits_pressed"]
